[package]
name = "chip8"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
glium = { version = "0.25", defeault-features = true }
imgui = "0.2.1"
imgui-winit-support = "0.2.1"
imgui-glium-renderer = "0.2.0"
winit = "0.20.0"
piston = "0.49.0"
piston2d-glium_graphics = "0.72.0"
pistoncore-winit_window = "0.12.0"