[package]
name = "chip8"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfd = "0.0.4"
rand = "0.7.3"
bit-vec = "0.6.1"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
pistoncore-glutin_window = "0.63.0"
